--- a/package.json
+++ b/package.json
@@ -10,11 +10,24 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
+    "motion": "^12.19.1",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
+  },
+  "overrides": {
+    "framer-motion": {
+      "react": "19.0.0-rc-66855b96-20241106",
+      "react-dom": "19.0.0-rc-66855b96-20241106"
+    },
+    "motion": {
+      "react": "19.0.0-rc-66855b96-20241106",
+      "react-dom": "19.0.0-rc-66855b96-20241106"
+    }
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
