--- a/package.json
+++ b/package.json
@@ -9,25 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.522.0",
-    "motion": "^12.19.1",
-    "next": "15.3.4",
+    "next": "^16.0.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
-  },
-  "overrides": {
-    "framer-motion": {
-      "react": "19.0.0-rc-66855b96-20241106",
-      "react-dom": "19.0.0-rc-66855b96-20241106"
-    },
-    "motion": {
-      "react": "19.0.0-rc-66855b96-20241106",
-      "react-dom": "19.0.0-rc-66855b96-20241106"
-    }
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.0.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
