--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^16.0.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-activity-calendar": "^3.1.1",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1"
   },
